src/components/Discover NFT/DiscoverNFT.css
.discover-nft-container {
  position: relative;
  width: 75vw;
  display: flex;
  height: auto;
  flex-shrink: 0;
  background: rgba(217, 224, 236, 0.2);
  backdrop-filter: blur(25px);
  margin: 123px auto;
  box-sizing: border-box;
  flex-direction: column;
}
.discover-nft-title {
  display: inline-flex;
  width: 400px;
  color: #000;
  font-size: 34px;
  font-weight: 700;
  margin-top: 64px;
  margin-left: 9%;
}
@media only screen and (max-width: 600px) {
  .discover-nft-title {
    width: 350px;
  }
}
.discover-nft-categories {
  width: 82%;
  height: auto;
  display: flex;
  margin: 36px auto;
  justify-content: space-between;
  position: relative;
}
.discover-nft-menu {
  top: 10%;
  display: flex;
  flex-wrap: wrap;
  gap: 12px;
  width: 90%;
}

.discover-nft-menu-items-active {
  display: flex;
  padding: 10px 20px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 10px;
  color: #fff;
  font-size: 14px;
  font-family: "DM Sans", sans-serif;
  font-weight: 500;
  border-radius: 100px;
  background: #3d00b7;
}
.discover-nft-menu-items {
  display: flex;
  padding: 9px 20px;
  flex-direction: column;
  justify-content: center;
  font-family: "DM Sans", sans-serif;
  align-items: center;
  gap: 10px;
  font-weight: 500;
  border-radius: 100px;
  background: rgba(220, 220, 220, 0.2);
}
.discover-nft-menu-items:hover {
  cursor: pointer;
  color: #fff;
  background: #5605f7;
}
.discover-nft-filter {
  position: absolute;
  right: 0;
  display: flex;
  flex-wrap: wrap;
  padding: 0px 20px;
  justify-content: center;
  align-items: center;
  gap: 10px;
  border-radius: 100px;
  background: rgba(220, 220, 220, 0.2);
}
.discover-nft-filter:hover {
  cursor: pointer;
  background: rgba(155, 153, 153, 0.2);
  transition: opacity 100ms ease-in-out;
}
.filter-icon {
  width: 24px;
  height: 24px;
}
.filter {
  color: #371c87;
  font-size: 14px;
  font-family: "DM Sans", sans-serif;
  font-weight: 500;
  line-height: 17.452px;
}

.discover-nft-contents-wrapper {
  position: relative;
  top: 15%;
  left: 9%;
  width: 90%;
  height: auto;
  display: flex;
  flex-wrap: wrap;
  flex: 1;
  row-gap: 40px;
  column-gap: 75px;
  padding-bottom: 20px;
}
@media only screen and (max-width: 600px) {
  .discover-nft-contents-wrapper  {
    margin: auto;
  }
}
.discover-nft-contents-item {
  position: relative;
  width: 269.876px;
  height: 373px;
  background: #ffffff;
  border-radius: 13.165px;
}

.discover-nft-image {
  position: absolute;
  left: 11px;
  top: 11px;
  right: 11px;
}
.discover-nft-avatar1 {
  position: absolute;
  top: 212px;
  left: 20px;
  z-index: 1;
}
.discover-nft-avatar2 {
  position: absolute;
  top: 212px;
  left: 42px;
  z-index: 2;
}
.discover-nft-avatar3 {
  position: absolute;
  top: 212px;
  left: 62px;
  z-index: 3;
}
.discover-nft-avatar4 {
  position: absolute;
  top: 212px;
  left: 84px;
  z-index: 4;
}
.discover-nft-icon {
  position: absolute;
  top: 290px;
  left: 25px;
}
.discover-nft-text1 {
  position: absolute;
  color: #000;
  font-size: 19.747px;
  font-family: "DM Sans", sans-serif;
  font-weight: 700;
  line-height: 19.146px;
  top: 240px;
  left: 25px;
}
.discover-nft-text2 {
  position: absolute;
  top: 281px;
  left: 42px;
  color: #00ac4f;
  font-size: 10.971px;
  font-family: "DM Sans", sans-serif;
  font-weight: 700;
}
.discover-nft-text3 {
  position: absolute;
  color: #838383;
  text-align: right;
  font-size: 13.165px;
  font-family: "DM Sans", sans-serif;
  font-weight: 500;
  line-height: 19.146px;
  right: 28px;
  top: 278px;
}
.discover-nft-text4 {
  position: absolute;
  display: inline-flex;
  padding: 4.388px 10.971px;
  align-items: flex-start;
  gap: 10.971px;
  border-radius: 109.706px;
  background: #f5f5f5;
  color: #5539a8;
  text-align: right;
  font-size: 10.971px;
  font-family: "DM Sans", sans-serif;
  font-weight: 700;
  line-height: 19.146px;
  bottom: 0;
  left: 20px;
}
.discover-nft-text5 {
  position: absolute;
  color: #4f33a3;
  font-size: 15.359px;
  font-family: "DM Sans", sans-serif;
  font-weight: 500;
  right: 23px;
  bottom: 0;
}
.discover-nft-divider {
  position: absolute;
  width: 223.8px;
  height: 1.064px;
  background: #f4f4f4;
  bottom: 11%;
  left: 8%;
}

.btn-wrapper {
  width: 100%;
  display: flex;
  justify-content: center;
  margin-top: 55px;
  margin-bottom: 47px;
}
.btn {
  display: inline-flex;
  justify-content: center;
  padding: 20px 40px;
  font-family: "DM Sans", sans-serif;
  color: #4f33a3;
  border: 3px solid #3d00b7;
  width: 100px;
  border-radius: 50px;
  font-weight: 500;
  font-size: 20px;
  font-style: normal;
  line-height: normal;
}
.btn:hover {
  cursor: pointer;
  color: #fff;
  background: #5605f7;
}

